# zenmux-benchmark

./: .gitignore  CLAUDE.md  LICENSE  README.md  benchmark.py  config.py  example.py  main.py  pyproject.toml  test_logging_system.py
.context/references/: README.md  references-list.txt
.github/: README.md
.github/workflows/: benchmark.yml  fix-benchmark.yml
hle/: __init__.py  dataset.py  evaluation.py  judge.py  runner.py  statistics.py
results/20250917_210802/: metrics_summary_20250917_210802.json
results/20250918_011131/: metrics_summary_20250918_011131.json
results/20250918_103520/: metrics_summary_20250918_103520.json
results/20250918_202821/: metrics_summary_20250918_202821.json
results/20250918_210802/: metrics_summary_20250918_210802.json
results/20250919_023624/: available_models_20250919_023624.json  evaluation_failures_20250919_023624.json  judge_failures_20250919_023624.json  metrics_summary_20250919_023624.json  question_ids_20250919_023624.json
results/20250919_170003/: available_models_20250919_170003.json  metrics_summary_20250919_170003.json  question_ids_20250919_170003.json
results/20250921_031820/: available_models_20250921_031820.json  evaluation_statistics_20250921_031820.json  judge_statistics_20250921_031820.json  metrics_only_20250921_031820.json  metrics_statistics_20250921_031820.json  metrics_summary_20250921_031820.json  question_ids_20250921_031820.json
scripts/: update-references.sh
tests/: test_exclude_functionality.py
utils/: __init__.py  logging.py
zenmux/: __init__.py  api.py  client.py  models.py
(+1167 files in other folders)
