[project]
name = "zenmux-benchmark"
version = "0.1.0"
description = "The open-source AI model performance evaluation framework by ZenMux. Official benchmark suite for evaluating AI model performance across multiple dimensions."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.1.0",
    "httpx[socks]>=0.28.1",
    "numpy>=2.3.3",
    "openai>=1.107.3",
]
